<resources>
    <string name="app_name">Android</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Create by AnhTVc -->
    <string name="tag_name_default">Default Name</string>
    <string name="read_more">Xem thêm</string>
    <string name="text_content_example">Your Apple ID, tranvietanh.hust@gmail.com,</string>
    <string name="user_name_example">AnhTVc</string>
    <string name="time_create_example">4 phút trước</string>

    <string name="name_tag_example">Tôi 20</string>
    <string name="status_followed_TagActivity">Đã theo dõi</string>
    <string name="status_follow_TagActivity">Chưa theo dõi</string>
    <string name="status_other_TagActivity">Khác</string>

</resources>