<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:id="@+id/id_element"
    android:layout_marginTop="@dimen/margin_top_element">
    <RelativeLayout
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_width="match_parent"
        android:id="@+id/relativeTag"
        android:layout_marginTop="@dimen/margin_tag_in_element"
        android:layout_height="wrap_content">

        <Button
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_tag"
            android:background="@null"
            android:text="@string/tag_name_default"
            android:textSize="@dimen/text_size_tag"
            android:id="@+id/bttag1"
            android:textAllCaps="false"
            android:textColor="@color/user_update"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="italic"
            android:layout_alignParentTop="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_more"
            android:textColor="@color/user_update"
            android:id="@+id/readmoreTag"
            android:textSize="@dimen/text_size_read_more"
            android:layout_marginTop="@dimen/marginTop_read_more_tag"
            android:layout_marginRight="@dimen/marginRight_read_more_tag"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <Button
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@null"
        android:text="@string/tag_name_default"
        android:textSize="@dimen/text_size_tag"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:textColor="@color/user_update"
        android:id="@+id/bttag2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:id="@+id/tableRowImage">

        <ImageView
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:layout_width="200dp"
            android:id="@+id/image_post_left"
            android:src="@drawable/hdclearart"
            android:layout_alignParentLeft="true"
            android:padding="1dp"
            android:background="#E2E2DC"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <ImageView
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_height="10dp"
            android:src="@drawable/hdclearart"
            android:id="@+id/image_post_right_top"
            android:layout_width="100dp"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:padding="1dp"
            android:layout_alignParentEnd="true"
            android:background="#E2E2DC"
            android:layout_toRightOf="@+id/image_post_left"
            android:layout_toEndOf="@+id/image_post_left" />

        <ImageView
            android:focusable="false"
            android:background="#E2E2DC"
            android:focusableInTouchMode="false"
            android:layout_height="10dp"
            android:src="@drawable/hdclearart"
            android:layout_width="100dp"
            android:padding="1dp"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/image_post_right_bottom"
            android:layout_toRightOf="@+id/image_post_left"
            android:layout_toEndOf="@+id/image_post_left"
            android:layout_below="@+id/image_post_right_top" />c2wsaz
    </RelativeLayout>
    <TextView
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/content_post"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textColor="@color/color_text_content_element"
        android:text="@string/text_content_example"
        android:textSize="@dimen/text_size_content"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/marginTop_feedback_in_element"
        android:layout_marginBottom="@dimen/marginBottom_feedBack_in_element"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <RelativeLayout
                android:layout_weight="1.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center"
                android:focusableInTouchMode="false">

                <Button
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="@dimen/height_image_feedback_in_element"
                    android:layout_height="@dimen/height_image_feedback_in_element"
                    android:id="@+id/bt_heart"
                    android:background="@drawable/ic_heart_outline_grey600_36dp"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/user_update" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:focusable="false"
                android:focusableInTouchMode="false">

                <Button
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="@dimen/height_image_feedback_in_element"
                    android:layout_height="@dimen/height_image_feedback_in_element"
                    android:id="@+id/bt_heart_broken"
                    android:background="@drawable/ic_message_outline_grey600_36dp"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/user_update" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user"
        android:paddingRight="@dimen/paddingRight_user_in_element">
        <TextView
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="wrap_content"
            android:id="@+id/user_name"
            android:layout_height="wrap_content"
            android:text="@string/user_name_example"
            android:textSize="@dimen/text_size_tag"
            android:layout_marginTop="@dimen/marginTop_user_name_in_element"
            android:layout_marginRight="@dimen/marginRight_user_name_in_element"
            android:textColor="@color/color_text_user_name"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/user_image"
            android:layout_toStartOf="@+id/user_image" />

        <TextView
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_create_example"
            android:id="@+id/time_create"
            android:textColor="@color/user_update"
            android:layout_below="@id/user_name"
            android:textSize="@dimen/text_size_time_create"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/user_name"
            android:layout_alignStart="@+id/user_name" />

        <ImageView
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="@dimen/weight_image_user_name"
            android:layout_height="@dimen/weight_image_user_name"
            android:foregroundGravity="right"
            android:id="@+id/user_image"
            android:src="@drawable/john_williams"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


</LinearLayout>